update func update user and pass
