# docs/swagger.json
@@ -8,7 +8,7 @@
     },
     "basePath": "/",
     "paths": {
-        "/api/user/change_password": {
+        "/api/user//change_password/{id}": {
             "put": {
                 "description": "хендлер проверяет авторизован ли пользователь и запрашивает подтверждение пароля\nесли все в порядке, пользователю подается форма, для изменения данных.\nзатем пользователь подает форму на сервер, и они записываются вместо старых",
                 "consumes": [
@@ -57,7 +57,7 @@
                 }
             }
         },
-        "/api/user/change_user": {
+        "/api/user/change_user/{id}": {
             "put": {
                 "description": "хендлер принимает форму, в которой содержатся новые данные и данные оставшиеся без изменений.\nон записывает все данные вместо старых",
                 "consumes": [
@@ -334,6 +334,12 @@
     "definitions": {
         "domain.ChangePassForm": {
             "type": "object",
+            "required": [
+                "confirm_pass",
+                "old_password",
+                "password",
+                "updated_at"
+            ],
             "properties": {
                 "confirm_pass": {
                     "description": "подтверждение пароля\nПоле обязательно",
@@ -346,11 +352,19 @@
                 "password": {
                     "description": "новый пароль\nПоле обязательно",
                     "type": "string"
+                },
+                "updated_at": {
+                    "type": "string"
                 }
             }
         },
         "domain.ChangeUserForm": {
             "type": "object",
+            "required": [
+                "date_of_birth",
+                "name",
+                "updated_at"
+            ],
             "properties": {
                 "date_of_birth": {
                     "description": "дата рождения\nПоле обязательно",
@@ -359,11 +373,21 @@
                 "name": {
                     "description": "имя пользователя\nПоле обязательно",
                     "type": "string"
+                },
+                "updated_at": {
+                    "type": "string"
                 }
             }
         },
         "domain.RegisterUserForm": {
             "type": "object",
+            "required": [
+                "confirm_password",
+                "date_of_birth",
+                "email",
+                "name",
+                "password"
+            ],
             "properties": {
                 "confirm_password": {
                     "description": "подтверждение пароля\nПоле обязательно",
@@ -389,6 +413,10 @@
         },
         "domain.UserAuthForm": {
             "type": "object",
+            "required": [
+                "email",
+                "password"
+            ],
             "properties": {
                 "email": {
                     "description": "логин\nПоле обязательно",
